--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     color: purple;
     font-size: 40px;
     background-color: gold;
-    font-family: "Times New Roman";
+    font-family: "Times New Roman", sans-serif;
     text-align: center;
 }
 
@@ -10,3 +10,10 @@ img {
     height: auto;
     width: 300px;
 }
+
+a {
+    color:Red;
+    font-size: 24px;
+
+}
+
