--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,19 @@ img {
 a {
     color:Red;
     font-size: 24px;
-
 }
 
+h2 {
+    color: blue;
+    font-size: 28px;
+    background-color: seashell;
+    font-weight: bold;
+    font-family: "Comic Sans", sans-serif;
+}
+
+.description {
+    color: orange;
+    background-color: black;
+    font-size: 18px;
+    font-family: "Comic Sans", sans-serif;
+}
